[package]
name = "zabbix"
version = "0.2.0"
description = "zabbix"
authors = ["李文军 <liwenjun@21cn.com>"]
categories = ["development-tools"]
license = "MIT"
edition = "2018"

[dependencies]
failure = "0.1.5"
log = "0.4.6"
byteorder = "1.2.7"
#pretty-hex = "0.1.0"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.36"
regex = "1.1.0"
chrono = "0.4.6"
humantime = "1.2.0"
