[package]
name = "zabbix-proxy"
version = "0.1.0"
description = "zabbix proxy"
authors = ["李文军 <liwenjun@21cn.com>"]
categories = ["development-tools"]
license = "MIT"
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.36"
regex = "1.1.0"
failure = "0.1.5"
log = "0.4.6"
chrono = "0.4.6"

zabbix = { version = "0.1", path = "../" }
zabbix-utils = { version = "0.1", path = "../zabbix-utils" }
